fix: fix item display x overflow

--- a/src/app/ui/item-display/item-display.styles.scss
+++ b/src/app/ui/item-display/item-display.styles.scss
@@ -1,6 +1,11 @@
 
 @import 'variables';
 
+:host {
+    flex: 1;
+    width: 50%;
+}
+
 [item-display] {
     background-color: #fff;
     display: flex;
